[project]
name = "python-ai-extension-server"
version = "0.1.0"
description = ""
authors = [
    {name = "nishantsethi",email = "nsethi610@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.20,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "langchain-community (>=0.3.19,<0.4.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "langchain-chroma (>=0.2.2,<0.3.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
